Fixed spacing

--- a/frontend/src/stylesheets/team_members.css
+++ b/frontend/src/stylesheets/team_members.css
@@ -1,6 +1,8 @@
 .team-members {
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-evenly;
 }
 
 .team-member {
